hphp/hack/test/typecheck/error_messages/constructor_where_constraints.php
<?hh

class X {}

class A<T> {
  public function __construct(classname<T> $f) where T = nothing
  {}
}

function test():void {
  new A<X>(X::class);
}
